--- a/index.html
+++ b/index.html
@@ -2,37 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Oredornment | Handmade Jewelry</title>
-    <link rel="stylesheet" href="./oredornmentcss.css">
-    <link rel="shortcut icon" href="./images/ologo.jpg" />
+    <title>OREdornment | Handmade Jewelry</title>
+    <link rel="stylesheet" href="./ore.css" />
+    <link rel="shortcut icon" href="./images/Ologo.jpg" />
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./oredornmentjs.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script type="text/javascript" src="./ore.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Calligraffitti" rel="stylesheet">
 </head>
+<body>
 <header>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <ul>
-                <a href="./index.html"><li><img src="./images/Logomakr_5CT1TP.png" alt="Logo"></li></a>
-                <a href="./index.html"><li>Home</li></a>
-                <a href=""><li>Our Story</li></a>
-                <a href=""><li>Shop</li></a>
-                <a href=""><li>Lookbook</li></a>
-                <a href=""><li>Contact</li></a>
-            </ul>
-        </div>
+
+    <nav class="navbar center">
+        <ul>
+            <a href="./index.html"><li>Home</li></a>
+            <a href="./ourstory.html"><li>Our Story</li></a>
+			<li><img src="./images/Logomakr_5CT1Tp.png" alt="Logo"></li>
+            <a href="./gallery.html"><li>Gallery</li></a>
+            <a href="./contact.html"><li>Contact</li></a>
+        </ul>
     </nav>
 </header>
+<hr class= "divider"/>
 
-<body>
     <div id="scroller" style="width: 100%; height: 400px; margin: 66 auto;">
         <div class="innerScrollArea">
             <ul>
-                <li><img src="./images/girl-287138_1280.jpg" height="400" /></li>
-                <li><img src="./images/nose-ring-1652971_1280.jpg" height="400" /></li>
+                <li><img src="./images/ore1.png" height="400" /></li>
+                <li><img src="./images/ore2.png" height="400" /></li>
+				<li><img src="./images/ore3.png" height="400" /></li>
+                <li><img src="./images/ore4.png" height="400" /></li>
+				<li><img src="./images/ore5.png" height="400" /></li>
+                <li><img src="./images/ore6.png" height="400" /></li>
             </ul>
         </div>
     </div>
-
+<footer>
+		<a href="https://www.facebook.com/Oredornment"><img src="./images/Logomakr_4amN1P.png" alt="Facebook Logo" class="social-icon"></a>
+		<a href="https://www.instagram.com/oredornment"><img src="./images/Logomakr_7SS89e.png" alt="Instagram Logo" class="social-icon"></a>
+        <p>&copy; 2016 Anna Heston</p>
+</footer>
 </body>
+
 </html>
