--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
 <body>
 <header>
 
-    <nav class="navbar center">
+    <nav class="supportnav">
         <ul>
             <a href="./index.html"><li>Home</li></a>
             <a href="./ourstory.html"><li>Our Story</li></a>
-			<li><img src="./images/Logomakr_5CT1Tp.png" alt="Logo"></li>
+			<li><img src="./images/whiteologo.jpg" alt= "Logo" /></li>
             <a href="./gallery.html"><li>Gallery</li></a>
             <a href="./contact.html"><li>Contact</li></a>
         </ul>
     </nav>
 </header>
-<hr class= "divider"/>
+	<div>
+		<h1 id="subheading">OREdornment~Handmade Jewelry</h1>
+	</div>
+<!--<hr class= "divider"/>-->
 
     <div id="scroller" style="width: 100%; height: 400px; margin: 66 auto;">
         <div class="innerScrollArea">
