fixed typo, added gallery javascript

--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,8 @@
         </ul>
     </nav>
 </header>
-<section>
+<section class= "gal">
+<!--<script src="./gallery.js"></script-->
           <div class="img">
               <img class="img-zoom" src="./images/ore1.png" alt="" width="300" height="200">
               <div class="desc">Turquoise Nugget Earrings</div>
@@ -36,7 +37,7 @@
 		  </div>
 		  <div class="img">
               <img class="img-zoom" src="./images/ore12.png" alt="" width="300" height="200">
-              <div class="desc">Whit Shell and Flower Charm Earrings</div>
+              <div class="desc">White Shell and Flower Charm Earrings</div>
           </div>
 		  <div class="img">
               <img class="img-zoom" src="./images/ore13.png" alt="" width="300" height="200">
@@ -197,4 +198,5 @@
 		<a href="https://www.instagram.com/oredornment"><img src="./images/Logomakr_7SS89e.png" alt="Instagram Logo" class="social-icon"></a>
         <p>&copy; 2016 Anna Heston</p>
 </footer>
+
 </body>
