updated design of supporting pages

--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>OREdornment | Handmade Jewelry</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="./ore.css" />
     <link rel="shortcut icon" href="./images/Ologo.jpg" />
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
@@ -10,6 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Calligraffitti" rel="stylesheet">
 </head>
 <body>
+
 <header>
     <nav class="supportnav">
         <ul>
@@ -20,9 +22,11 @@
         </ul>
     </nav>
 </header>
+<div class= "container-fluid">
+
 <section class= "gal">
-<!--<script src="./gallery.js"></script-->
-          <div class="img">
+    <!---<script src="./gallery.js"></script>--->
+          <div class="img" id="picture" align="center">
               <img class="img-zoom" src="./images/ore1.png" alt="" width="300" height="200">
               <div class="desc">Turquoise Nugget Earrings</div>
           </div>
@@ -57,7 +61,7 @@
           </div>
 		  <div class="img">
               <img class="img-zoom" src="./images/ore17.png" alt="" width="300" height="200">
-              <div class="desc"></div>
+              <div class="desc">xxx</div>
           </div>
 		  <div class="img">
               <img class="img-zoom" src="./images/ore18.png" alt="" width="300" height="200">
@@ -193,10 +197,12 @@
           </div>
           
       </section>
+</div>
 <footer>
 		<a href="https://www.facebook.com/Oredornment"><img src="./images/Logomakr_4amN1P.png" alt="Facebook Logo" class="social-icon"></a>
 		<a href="https://www.instagram.com/oredornment"><img src="./images/Logomakr_7SS89e.png" alt="Instagram Logo" class="social-icon"></a>
         <p>&copy; 2016 Anna Heston</p>
 </footer>
+
 
 </body>
