--- a/ourstory.html
+++ b/ourstory.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>OREdornment | Handmade Jewelry</title>
-    <link rel="stylesheet" href="./ore.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./ore.css" />
     <link rel="shortcut icon" href="./images/Ologo.jpg" />
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script type="text/javascript" src="./ore.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Calligraffitti" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body class=background>
     <nav class="supportnav">
@@ -18,10 +20,9 @@
             <a href="./contact.html"><li>Contact</li></a>
         </ul>
     </nav>
-	<div id=container>
-		<div id=necklacepic ><img id=necklace src="./images/stampedjewelry.jpg" alt=""></div>
+	<div class="container-fluid story">
+		<!---<div id=necklacepic ><img id=necklace src="./images/stampedjewelry.jpg" alt=""></div>--->
 			<div id="header1">
-				<h1 id=storytitle >OREdornment</h1>
 				<p id=story >We are an aunt and niece team of jewelry designers located in the Greater Philadelphia area. 
 				Several years ago we became interested in jewelry design and started experimenting with techniques
 				and attending workshops. When our passion for the craft grew beyond a hobby we decided to start OREdornment. 
@@ -31,6 +32,11 @@
 				or other special occaision. If you see something here that you like or are interested in a consultation, 
                 just send a message to www.OREdornment@gmail.com. We hope to hear from you soon!</p>
 				<h2 id=signature>-Mariann and Deb</h2>
+				<ul id="profilepics">
+					<li><img src="./images/mariann.png" alt=""></li>
+					<li><img src="./images/deb.png" alt=""></li>
+				</ul>
+					
 			</div>
 	</div>
 
