updates homepage design

--- a/index.html
+++ b/index.html
@@ -3,31 +3,78 @@
 <head>
     <meta charset="utf-8">
     <title>OREdornment | Handmade Jewelry</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="./ore.css" />
     <link rel="shortcut icon" href="./images/Ologo.jpg" />
-    
-    
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Calligraffitti" rel="stylesheet">
 </head>
 <body>
 <header>
 
+	<div class="cover container-fluid">
+		<div class="text-center">
+			<span class="head-main">OREdornment</span>	
+		</div>
+	</div>
+
     <nav class="supportnav">
         <ul>
             <a href="./index.html"><li>Home</li></a>
             <a href="./ourstory.html"><li>Our Story</li></a>
-			<li><img src="./images/whiteologo.jpg" alt= "Logo" /></li>
+			<!---<li><img src="./images/whiteologo.jpg" alt= "Logo" /></li>-->
             <a href="./gallery.html"><li>Gallery</li></a>
             <a href="./contact.html"><li>Contact</li></a>
         </ul>
     </nav>
 </header>
-	<div>
-		<h1 id="subheading">OREdornment~Handmade Jewelry</h1>
-	</div>
+
+<div class="slideshow-row pull-left">
+  <div class="mySlides w3-animate-fading">
+    <div class="numbertext"></div>
+    <img src="./images/ore1.png" style="width:100%">
+    <div class="text">Earrings</div>
+  </div>
+
+  <div class="mySlides w3-animate-fading">
+    <div class="numbertext"></div>
+    <img src="./images/ore2.png" style="width:100%">
+    <div class="text">Necklaces</div>
+  </div>
+
+  <div class="mySlides w3-animate-fading">
+    <div class="numbertext"></div>
+    <img src="./images/ore3.png" style="width:100%">
+    <div class="text">Bracelets</div>
+  </div>
+  
+  <div class="mySlides w3-animate-fading">
+    <div class="numbertext"></div>
+    <img src="./images/ore4.png" style="width:100%">
+    <div class="text">Custom Orders</div>
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+
+<br>
+
+
+<div class="sidetext" style="text-align:center">
+  <h1>Handmade Jewelry</h1>
+  <ul>
+	<li>Custom Orders</li>
+	<li>One-of-a-Kind</li>
+	<li>Repairs</li>
+	<li>Locally made in the Philadelphia Area</li>
+  </ul>
+</div>
+
+	
 <!--<hr class= "divider"/>-->
 
-    <div id="scroller" style="width: 100%; height: 400px; margin: 66 auto;">
+    <!---<div id="scroller" style="width: 100%; height: 400px; margin: 66 auto;">
         <div class="innerScrollArea">
             <ul>
                 <li><img src="./images/ore1.png" height="400" /></li>
@@ -38,7 +85,7 @@
                 <li><img src="./images/ore6.png" height="400" /></li>
             </ul>
         </div>
-    </div>
+    </div>--->
 <footer>
 		<a href="https://www.facebook.com/Oredornment"><img src="./images/Logomakr_4amN1P.png" alt="Facebook Logo" class="social-icon"></a>
 		<a href="https://www.instagram.com/oredornment"><img src="./images/Logomakr_7SS89e.png" alt="Instagram Logo" class="social-icon"></a>
