--- a/ourstory.html
+++ b/ourstory.html
@@ -22,8 +22,8 @@
     </nav>
 	<div class="container-fluid story">
 		<!---<div id=necklacepic ><img id=necklace src="./images/stampedjewelry.jpg" alt=""></div>--->
-			<div id="header1">
-				<p id=story >We are an aunt and niece team of jewelry designers located in the Greater Philadelphia area. 
+			<div class="row" id="header1">
+				<p id="story" class="col-md-12">We are an aunt and niece team of jewelry designers located in the Greater Philadelphia area. 
 				Several years ago we became interested in jewelry design and started experimenting with techniques
 				and attending workshops. When our passion for the craft grew beyond a hobby we decided to start OREdornment. 
 				Since 2013 we have been providing unique, handmade jewelry to our customers. Most of our pieces
@@ -31,14 +31,14 @@
 				wire work, and metal stamping.We can also work with you to create custom pieces for your wedding
 				or other special occaision. If you see something here that you like or are interested in a consultation, 
                 just send a message to www.OREdornment@gmail.com. We hope to hear from you soon!</p>
-				<h2 id=signature>-Mariann and Deb</h2>
-				<ul id="profilepics">
+				<h2 id="signature" class="col-md-12">-Mariann and Deb</h2>
+				<ul id="profilepics" class="col-md-12">
 					<li><img src="./images/mariann.png" alt=""></li>
-					<li><img src="./images/deb.png" alt=""></li>
-				</ul>
-					
-			</div>
+					<li><img src="./images/mariann2.png" alt=""></li>
+			    </ul>
 	</div>
+	</div>
+</body>
 
 <footer>
 		<a href="https://www.facebook.com/Oredornment"><img src="./images/Logomakr_4amN1P.png" alt="Facebook Logo" class="social-icon"></a>
@@ -46,7 +46,7 @@
         <p>&copy; 2016 Anna Heston</p>
 </footer>
 
-</body>
+
 
 
 
