--- a/index.html
+++ b/index.html
@@ -5,31 +5,35 @@
     <title>OREdornment | Handmade Jewelry</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="./ore.css" />
+	<link rel="stylesheet" href="./responsive.css" />
     <link rel="shortcut icon" href="./images/Ologo.jpg" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Calligraffitti" rel="stylesheet">
+	<script type="text/javascript" src="./ore.js"></script>
 </head>
-<body>
-<header>
+<body class="container-fluid">
+<header class="row">
 
-	<div class="cover container-fluid">
+	<div class="cover">
 		<div class="text-center">
 			<span class="head-main">OREdornment</span>	
 		</div>
 	</div>
 
-    <nav class="supportnav">
-        <ul>
-            <a href="./index.html"><li>Home</li></a>
-            <a href="./ourstory.html"><li>Our Story</li></a>
-			<!---<li><img src="./images/whiteologo.jpg" alt= "Logo" /></li>-->
-            <a href="./gallery.html"><li>Gallery</li></a>
-            <a href="./contact.html"><li>Contact</li></a>
-        </ul>
+    <nav class="supportnav clearfix">
+		
+			<ul class="clearfix" id="navul">
+				<a href="./index.html"><li>Home</li></a>
+				<a href="./ourstory.html"><li>Our Story</li></a>
+				<a href="./gallery.html"><li>Gallery</li></a>
+				<a href="./contact.html"><li>Contact</li></a>
+			</ul>
+		<a href="#" id="pull"></a>
+		
     </nav>
 </header>
-
-<div class="slideshow-row pull-left">
+<div class="row">
+<div class="slideshow col-lg-6">
   <div class="mySlides w3-animate-fading">
     <div class="numbertext"></div>
     <img src="./images/ore1.png" style="width:100%">
@@ -54,14 +58,13 @@
     <div class="text">Custom Orders</div>
   </div>
 
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  
 </div>
 
-<br>
 
 
-<div class="sidetext" style="text-align:center">
+
+<div class="sidetext col-lg-6">
   <h1>Handmade Jewelry</h1>
   <ul>
 	<li>Custom Orders</li>
@@ -69,6 +72,8 @@
 	<li>Repairs</li>
 	<li>Locally made in the Philadelphia Area</li>
   </ul>
+</div>
+
 </div>
 
 	
@@ -86,7 +91,7 @@
             </ul>
         </div>
     </div>--->
-<footer>
+<footer class="row">
 		<a href="https://www.facebook.com/Oredornment"><img src="./images/Logomakr_4amN1P.png" alt="Facebook Logo" class="social-icon"></a>
 		<a href="https://www.instagram.com/oredornment"><img src="./images/Logomakr_7SS89e.png" alt="Instagram Logo" class="social-icon"></a>
         <p>&copy; 2016 Anna Heston</p>
