fixed responsive html, bootstrap

--- a/ourstory.html
+++ b/ourstory.html
@@ -5,22 +5,24 @@
     <title>OREdornment | Handmade Jewelry</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./ore.css" />
+	<link rel="stylesheet" href="./responsive.css" />
     <link rel="shortcut icon" href="./images/Ologo.jpg" />
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./ore.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Calligraffitti" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
-<body class=background>
+<body class="background container-fluid">
+<header class="row">
     <nav class="supportnav">
-        <ul>
+        <ul id="navul">
             <a href="./index.html"><li>Home</li></a>
             <a href="./ourstory.html"><li>Our Story</li></a>
             <a href="./gallery.html"><li>Gallery</li></a>
             <a href="./contact.html"><li>Contact</li></a>
         </ul>
+		<a href="#" id="pull"></a>
     </nav>
-	<div class="container-fluid story">
+</header>
+	<div class="story row">
 		<!---<div id=necklacepic ><img id=necklace src="./images/stampedjewelry.jpg" alt=""></div>--->
 			<div class="row" id="header1">
 				<p id="story" class="col-md-12">We are an aunt and niece team of jewelry designers located in the Greater Philadelphia area. 
@@ -38,15 +40,18 @@
 			    </ul>
 	</div>
 	</div>
-</body>
 
-<footer>
+
+<footer class="row">
 		<a href="https://www.facebook.com/Oredornment"><img src="./images/Logomakr_4amN1P.png" alt="Facebook Logo" class="social-icon"></a>
 		<a href="https://www.instagram.com/oredornment"><img src="./images/Logomakr_7SS89e.png" alt="Instagram Logo" class="social-icon"></a>
         <p>&copy; 2016 Anna Heston</p>
 </footer>
 
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+<script type="text/javascript" src="./ore.js"></script>
 
+</body>
 
 
 
