--- a/contact.html
+++ b/contact.html
@@ -3,28 +3,27 @@
 <head>
     <meta charset="utf-8">
     <title>OREdornment | Handmade Jewelry</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="./ore.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./ore.css" />
 	<link rel="stylesheet" href="./responsive.css" />
     <link rel="shortcut icon" href="./images/Ologo.jpg" />
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./ore.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Calligraffitti" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-    
+	
 </head>
-<body class="background">
-<header>
+<body class="background container-fluid">
+<header class="row">
     <nav class="supportnav">
-        <ul>
+        <ul id="navul">
             <a href="./index.html"><li>Home</li></a>
             <a href="./ourstory.html"><li>Our Story</li></a>
             <a href="./gallery.html"><li>Gallery</li></a>
             <a href="./contact.html"><li>Contact</li></a>
         </ul>
+		<a href="#" id="pull"></a>
     </nav>
 </header>
-<div class="contact container-fluid">
+
 <div id="contactbox" class="row">
 	<form id="mailer" class="email" action="mailer.php" method="post">
 		<p>Name:</p>
@@ -38,10 +37,13 @@
 		<input class="send" type="submit" value="Send">
 	</form>
 </div>
-</div>
-</body>
-<footer>
+
+<footer class="row">
 		<a href="https://www.facebook.com/Oredornment"><img src="./images/Logomakr_4amN1P.png" alt="Facebook Logo" class="social-icon"></a>
 		<a href="https://www.instagram.com/oredornment"><img src="./images/Logomakr_7SS89e.png" alt="Instagram Logo" class="social-icon"></a>
         <p>&copy; 2016 Anna Heston</p>
 </footer>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+<script type="text/javascript" src="./ore.js"></script>
+
+</body>
