--- a/index.html
+++ b/index.html
@@ -9,31 +9,27 @@
     <link rel="shortcut icon" href="./images/Ologo.jpg" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Calligraffitti" rel="stylesheet">
-	<script type="text/javascript" src="./ore.js"></script>
 </head>
 <body class="container-fluid">
 <header class="row">
-
 	<div class="cover">
 		<div class="text-center">
 			<span class="head-main">OREdornment</span>	
 		</div>
 	</div>
-
-    <nav class="supportnav clearfix">
-		
-			<ul class="clearfix" id="navul">
+    <nav class="supportnav">
+			<ul id="navul">
 				<a href="./index.html"><li>Home</li></a>
 				<a href="./ourstory.html"><li>Our Story</li></a>
 				<a href="./gallery.html"><li>Gallery</li></a>
 				<a href="./contact.html"><li>Contact</li></a>
 			</ul>
 		<a href="#" id="pull"></a>
-		
     </nav>
 </header>
-<div class="row">
-<div class="slideshow col-lg-6">
+
+<div class="slides row">
+<div class="slideshow col-md-6 col-lg-6">
   <div class="mySlides w3-animate-fading">
     <div class="numbertext"></div>
     <img src="./images/ore1.png" style="width:100%">
@@ -61,10 +57,7 @@
   
 </div>
 
-
-
-
-<div class="sidetext col-lg-6">
+<div class="sidetext col-md-6 col-lg-6">
   <h1>Handmade Jewelry</h1>
   <ul>
 	<li>Custom Orders</li>
@@ -77,20 +70,6 @@
 </div>
 
 	
-<!--<hr class= "divider"/>-->
-
-    <!---<div id="scroller" style="width: 100%; height: 400px; margin: 66 auto;">
-        <div class="innerScrollArea">
-            <ul>
-                <li><img src="./images/ore1.png" height="400" /></li>
-                <li><img src="./images/ore2.png" height="400" /></li>
-				<li><img src="./images/ore3.png" height="400" /></li>
-                <li><img src="./images/ore4.png" height="400" /></li>
-				<li><img src="./images/ore5.png" height="400" /></li>
-                <li><img src="./images/ore6.png" height="400" /></li>
-            </ul>
-        </div>
-    </div>--->
 <footer class="row">
 		<a href="https://www.facebook.com/Oredornment"><img src="./images/Logomakr_4amN1P.png" alt="Facebook Logo" class="social-icon"></a>
 		<a href="https://www.instagram.com/oredornment"><img src="./images/Logomakr_7SS89e.png" alt="Instagram Logo" class="social-icon"></a>
@@ -98,6 +77,7 @@
 </footer>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <script type="text/javascript" src="./ore.js"></script>
+<script type="text/javascript" src="./slideshow.js"></script>
 </body>
 
 </html>
