Added HTML for viewport ratio and pic of 2nd owner

--- a/ourstory.html
+++ b/ourstory.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>OREdornment | Handmade Jewelry</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./ore.css" />
 	<link rel="stylesheet" href="./responsive.css" />
@@ -35,7 +36,7 @@
                 just send a message to www.OREdornment@gmail.com. We hope to hear from you soon!</p>
 				<h2 id="signature" class="col-md-12">-Mariann and Deb</h2>
 				<ul id="profilepics" class="col-md-12">
-					<li><img src="./images/mariann.png" alt=""></li>
+					<li><img src="./images/debpic.png" alt=""></li>
 					<li><img src="./images/mariann2.png" alt=""></li>
 			    </ul>
 	</div>
